[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Weapon/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Weapon/GenericExplosion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Weapon/TirekBlast.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Weapon/SombraCrystal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Weapon/ChrysalisBeam.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Weapon/ScorpanSpear.tscn" type="PackedScene" id=6]

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="GenericExplosion" parent="." instance=ExtResource( 2 )]
visible = false

[node name="TirekBlast" parent="." instance=ExtResource( 3 )]
visible = false
scale = Vector2( 0.22, 0.22 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="TirekBlast"]
position = Vector2( -0.876217, -1.90052 )
scale = Vector2( 10.0623, 9.88427 )

[node name="SombraCrystal" parent="." instance=ExtResource( 4 )]
visible = false
scale = Vector2( 0.15, 0.15 )

[node name="VisibilityNotifier2D2" type="VisibilityNotifier2D" parent="SombraCrystal"]
position = Vector2( -1.28516, 1.03811e-05 )
scale = Vector2( 19.218, 3.06833 )

[node name="ChrysalisBeam" parent="." instance=ExtResource( 5 )]
visible = false
scale = Vector2( 0.15, 0.15 )
monitoring = false
monitorable = false

[node name="VisibilityNotifier2D2" type="VisibilityNotifier2D" parent="ChrysalisBeam"]
position = Vector2( -1.28516, 1.03811e-05 )
scale = Vector2( 19.218, 3.06833 )

[node name="ScorpanSpear" parent="." instance=ExtResource( 6 )]
visible = false
scale = Vector2( 0.16, 0.16 )

[node name="VisibilityNotifier2D3" type="VisibilityNotifier2D" parent="ScorpanSpear"]
position = Vector2( -3.74127, -0.845455 )
scale = Vector2( 18.7778, 4.48296 )

[node name="Delay" type="Timer" parent="."]
one_shot = true

[node name="WeaponSound" type="AudioStreamPlayer" parent="."]
bus = "Sound"

[node name="SelfRemove" type="Timer" parent="."]
wait_time = 7.0

[connection signal="area_entered" from="GenericExplosion" to="." method="_on_GenericExplosion_area_entered"]
[connection signal="screen_exited" from="TirekBlast/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_exited" from="SombraCrystal/VisibilityNotifier2D2" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_exited" from="ChrysalisBeam/VisibilityNotifier2D2" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_exited" from="ScorpanSpear/VisibilityNotifier2D3" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Delay" to="." method="_on_Delay_timeout"]
[connection signal="timeout" from="SelfRemove" to="." method="_on_SelfRemove_timeout"]
